# Notezilla

./: .gitignore  CLAUDE.md  LICENSE  ProjectPlan.md  Qwen Chat.cmd  README.md  pytest.ini
.claude/: settings.json  settings.local.json
.roo/: mcp.json
sample_notes/: 01-file-watcher-and-parser.md  02-vector-database-integration.md  03-fastmcp-api-implementation.md  04-note-schema-design.md  05-template-engine.md  06-ollama-connector.md  07-summarization-logic.md  08-blazor-layout-and-navigation.md  09-markdown-editor.md  10-search-interface.md  11-generation-hub.md  12-rust-wasm-markdown-renderer.md  13-blazor-wasm-component-integration.md  14-bidirectional-sync.md  15-mermaid-rendering-polish.md  16-error-handling-and-resilience.md
src/: config.py  field_enums.py  reserved_fields.py
src/backend/: chroma_frontmatter_parsing.py  chroma_parsing.py  database_adapter.py  database_update.py  directory_watcher.py  event_handling.py  file_io.py  logger.py  main.py  mcp_interface.py  note.py  output_schema.py  parse_markdown.py  requirements.txt
src/frontend/: Cargo.toml  Trunk.toml  index.html
src/frontend/src/: main.rs  settings.rs  state.rs
src/frontend/src/components/: activity_bar.rs  app_shell.rs  mod.rs  toast.rs  top_bar.rs
src/frontend/src/components/editor/: actions.rs  block.rs  edit_area.rs  mod.rs
src/frontend/src/components/file_io/: export.rs  fetch_directories.rs  import.rs  mod.rs  open.rs  save.rs
src/frontend/src/components/sidebar/: context_menu.rs  file_tree.rs  mod.rs  search_panel.rs
src/frontend/src/mcp/: client.rs  tools.rs
src/frontend/src/models/: block.rs  mod.rs  note.rs
src/frontend/src/rendering/: code.rs  graphviz.rs  image.rs  math.rs  mermaid.rs  mod.rs  utils.rs
src/frontend/templates/: export.html  new_markdown.md
src/note_updates/: database_adapter.py  database_update.py  directory_watcher.py  event_handling.py  file_io.py  main.py  mcp_interface.py  parse_markdown.py  rag_adapter.py  requirements.txt
src/tasks/: check_content_sync.py  check_path_sync.py  make_request.py  populate_database.py  query_database.py  restore_missing_files.py
tests/backend/: conftest.py  helpers.py  test_database_update.py  test_delete_note.py  test_file_io.py  test_folder_creation.py  test_get_dir_contents.py  test_get_note.py  test_main.py  test_markdown.py  test_restore_markdown.py  test_search_notes_by_field.py  test_search_notes_by_path.py  test_search_notes_by_tag.py  test_search_notes_by_text.py  test_upsert_note.py
tests/mock_notes/: example.md
tests/mock_notes/folder/: another_example.md
tests/note_updates/: test_folder_creation.py  test_main.py  test_markdown.py
