[package]
name = "notezilla-frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notezilla-frontend"
path = "src/main.rs"

[dependencies]
leptos              = { version = "0.8.19", features = ["csr"] }
leptos_icons        = "0.7.1"
icondata            = "0.7.0"
gloo-net            = { version = "0.7.0", features = ["http"] }
pulldown-cmark      = { version = "0.13.4", default-features = false, features = ["html"] }
layout-rs           = "0.1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
serde_yaml          = "0.9"
wasm-bindgen        = "0.2.125"
wasm-bindgen-futures = "0.4.75"
web-sys             = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "EventTarget",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    "FocusEvent",
    "FocusOptions",
    "MouseEvent",
    "Headers",
    "Response",
    "console",
    "CssStyleDeclaration",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
] }
js-sys              = "0.3"
console_error_panic_hook = "0.1"

syntect             = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html", "regex-fancy"] }
rusty-mermaid       = { version = "0.2.0", features = ["svg"] }
latex2mathml        = "0.2.3"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
